end of class time

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,122 @@
-hell, world
+<!DOCTYPE html>
+
+<head>
+  <title>XXXX</title>
+
+  <style>
+    body{
+      padding-top: 40px;
+      padding-bottom: 40px;
+      background-color: #e3f6f5;
+      display: flex;
+      justify-content: center;
+    }
+
+    .name{
+      color:#272343;
+      display: flex;
+      justify-content: center;
+    }
+
+    .banner{
+      display: flex;
+      justify-content: center;
+    }
+
+    .social-icons{
+      display: flex;
+      justify-content: space-around;
+    }
+
+    .social-icons a{
+      color:#272343;
+      text-decoration: none;
+    }
+
+    .link{
+      background-color: #bae8e8;
+      display: flex;
+      align-items: center;
+      padding: 5px;
+    }
+
+    .link a{
+      color: #272343;
+      text-decoration: none;
+      text-align: center;
+      flex-grow: 1;
+    }
+
+    .items{
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-width: 640px;
+      flex-grow: 1;
+    }
+
+    .banner-image{
+      width: 128px;
+      height: 128px;
+      object-fit: cover;
+      border-radius: 128px;
+    }
+
+    .thumbnail{
+      width: 48px;
+      height: 48px;
+      object-fit: cover;
+      border-radius: 48px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="items"> 
+    <div class="banner">
+      <img src="/thumbnails/profile.jpg" class="banner-image">
+    </div>
+    
+    <div class="name">
+      Anna Li
+    </div>
+
+    <div class="social-icons">
+      <a href="https://www.linkedin.com/in/anna-li-520/" target="_blank">
+        LinkedIn
+      </a>
+
+      <a href="https://www.instagram.com/annali_17/?hl=en" target="_blank">
+        Instagram
+      </a>
+    </div>
+
+    <div class="link">
+      <img src="/thumbnails/travel.jpg" class="thumbnail">
+      <a href="https://www.travelandleisure.com/best-places-to-go-2023-6827750" target="_blank">
+        Best Places to Travel to this Year
+      </a>
+    </div>
+
+    <div class="link">
+      <img src="/thumbnails/food.jpg" class="thumbnail">
+      <a href="https://www.timeout.com/chicago/restaurants/best-chicago-restaurants-our-picks-for-every-cuisine" target="_blank">
+        Best Restaurants to Try in Chicago in 2023
+      </a>
+    </div>
+
+    <div class="link">
+      <img src="/thumbnails/hiking.jpg" class="thumbnail">
+      <a href="https://www.travelandleisure.com/worlds-best/national-parks-in-america" target="_blank">
+        Top National Parks to Visit in the US
+      </a>
+    </div>
+
+    <div class="link">
+      <img src="/thumbnails/anime.jpg" class="thumbnail">
+      <a href="https://www.ign.com/articles/top-25-best-anime-series-of-all-time" target="_blank">
+        Best Anime to Watch of All Time
+      </a>
+    </div>
+</div>
+</body>
